--- a/src/components/ApiFetching/ApiCard.css
+++ b/src/components/ApiFetching/ApiCard.css
@@ -1,6 +1,5 @@
-.card{
-    padding: 10px;
-    margin: 10px;
-    background-color: aqua;
-
+.card {
+  padding: 10px;
+  margin: 10px;
+  background-color: aqua !important;
 }
